# dlib-to-tf-keras-converter

./: .gitignore  README.md  dlib_analysis.ipynb  main.py
converter/: model.py  tensorflow.py  weights.py  xml_analyzer.py
xml_generator/: CMakeLists.txt
xml_generator/cmake/: FindDlib.cmake
xml_generator/src/: CMakeLists.txt  main.cc
